# singularityU2017

./: CMakeLists.txt  README.md  faceDetection.cpp  face_detection.cpp
dlib/: CMakeCache.txt  Makefile  cmake_install.cmake  dlib-1.pc
dlib/config/: dlibConfig.cmake
dlib/cpp11_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
